fixed contrast

--- a/frontend/src/CommonAssets/InlineCourseMobile.css
+++ b/frontend/src/CommonAssets/InlineCourseMobile.css
@@ -20,7 +20,7 @@
   display: flex;
   justify-items: center;
   align-items: center;
-  color: #ad83c3;
+  color: #ebd2ff;
 }
 
 #mobileCourseInfo {
