--- a/frontend/src/routes/MainPage.css
+++ b/frontend/src/routes/MainPage.css
@@ -96,7 +96,7 @@
     width: 100%;
     height: 50vh;
     z-index: 3;
-    background: linear-gradient(264.38deg, #90429c 58.39%, #71297c 88.81%);
+    background: linear-gradient(264.38deg, #90299c 58.39%, #71297c 88.81%);
     clip-path: polygon(0 0, 100% 30%, 100% 95%, 0% 65%);
     display: flex;
     justify-content: center;
